syntax = "proto3";

package grpc;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/FrancescoIlario/grower/pkg/valvepb/grpc";

import "valve.shared.proto";

service ValveService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc OpenValve(OpenValveRequest) returns (OpenValveResponse) {}
  rpc CloseValve(CloseValveRequest) returns (CloseValveResponse) {}
}

message GetStatusRequest {}

message GetStatusResponse {
    shared.ValveStatus Status = 1;
}

message OpenValveRequest {}

message OpenValveResponse {}

message CloseValveRequest {}

message CloseValveResponse {}
